# cppmort

./: .gitignore  AUTHORS  LICENSE  README.md  configure.ac
m4/: ax_cxx_compile_stdcxx.m4
src/: Makefile.am
src/cppmort/: CPPMConfig.cpp  CPPMConfig.h  Makefile.am  OutputDir.cpp  OutputDir.h  SrcDb.cpp  SrcDb.h  analysis.cpp  cppmort.h  main.cpp
src/fakecpp/: Makefile.am  addClangDir.sh  clang.cpp  database.cpp  fakecpp.h  functionRef.cpp  main.cpp  sqlite.cpp
src/lib/: Makefile.am  functionref.cpp  functionref.h
test/: test.cpp  test.h
